# usbmon-elastic

./: .gitignore  Makefile  README.md  install.sh
collector-rs/: Cargo.toml
collector-rs/src/: main.rs
elastic/: elastic-agent-input.yml  logrotate-usbtop
systemd/: usbtop-collect.service
tools/: usbtop_collect.py  usbtop_debug.py
